k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-loadbalancer
  namespace: mern-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 5173
  - name: https
    port: 443
    targetPort: 5173
